# Eleven-labs-video-generator

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  cli_fail.txt  coverage.json  demo_output.txt  demo_progress.py  output.txt  package-lock.json  package.json  pyproject.toml  run_target_tests.py  run_tests.py  test_panel_debug.py  test_simple.py
.bmad/_cfg/: files-manifest.csv  manifest.yaml
.bmad/bmb/: config.yaml
.bmad/bmm/: config.yaml
.bmad/cis/: config.yaml
.bmad/core/: config.yaml
.github/workflows/: test.yml
bmad-custom-src/: custom.yaml
docs/: architecture.md  atdd-checklist-1-1.md  automation-summary-story-3-4.md  bmm-workflow-status.yaml  complete-analysis-report.md  epics.md  gate-decision-story-eleven-labs-ai-video.md  prd.md  project_context.md  sprint-change-proposal-2025-12-12.md  sprint-status.yaml  test-design-system.md  test-review-story-2-2.md
docs/analysis/: product-brief-Eleven-labs-AI-Video-2025-12-09.md
docs/architecture/: api-reference.md  architecture-decision-records.md  architecture-validation-results.md  core-architectural-decisions.md  cross-functional-architecture-decisions.md  first-principles-architecture.md  implementation-patterns-consistency-rules.md  index.md  pre-mortem-analysis-potential-failure-scenarios.md  project-context-analysis.md  project-context.md  project-structure-boundaries.md  recommended-architecture-tree-of-thoughts-analysis.md  risk-assessment.md  starter-template-evaluation.md
docs/diagrams/: dataflow-video-pipeline.excalidraw  flowchart-cli-generate.excalidraw  hexagonal-architecture.excalidraw
eleven_video/: __init__.py  main.py
output/: script_20251215_222825.txt
scripts/: ci-local.sh  simulate_pipeline.py  test-changed.sh  test_image_generation.py  test_script_to_speech.py
tests/: README.md  conftest.py
(+231 files in other folders)
