[project]
name = "eleven-video"
version = "0.1.0"
description = "Eleven Labs AI Video Generator"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "typer",
    "rich",
    "python-dotenv",
    "pydantic",
    "pydantic-settings",
    "requests>=2.31.0",
    "aiohttp>=3.8.0",
    "tqdm>=4.65.0",
    "Pillow>=10.0.0",
    "pydub>=0.25.1",
    "platformdirs>=4.0",
    "httpx>=0.25.0",
    "tenacity>=8.2.0",
    "google-generativeai>=0.8.0",
]

[project.scripts]
eleven-video = "eleven_video.main:app"

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "black",
    "pre-commit",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.11.1",
    "pytest-cov>=4.1.0",
]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["eleven_video", "eleven_video.config", "eleven_video.exceptions", "eleven_video.api", "eleven_video.models", "eleven_video.processing", "eleven_video.ui", "eleven_video.utils", "eleven_video.constants", "eleven_video.orchestrator"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
target-version = "py39"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "B", "A", "C4", "T20"]
ignore = ["E501"]  # Line too long handled by line-length

[tool.ruff.lint.per-file-ignores]
# Test files should not have module-level side effects
# B008: Do not perform function calls in argument defaults (used for fixtures)
"tests/**/*.py" = ["B008"]

# Ruff doesn't have a built-in rule for load_dotenv at module level,
# but we document this pattern to avoid in project guidelines.
# See: docs/sprint-artifacts/epic-1-stories/epic-1-retro-2025-12-14.md